Reimplement timings based on HotSpot SafePoint data. Improve LogEntry double fixed precision appending code.